WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216720
[JSC] Generator declaration should not be allowed in single statement context
https://bugs.webkit.org/show_bug.cgi?id=216720
Summary
[JSC] Generator declaration should not be allowed in single statement context
Yusuke Suzuki
Reported
2020-09-18 17:25:31 PDT
[JSC] Generator declaration should not be allowed in single statement context
Attachments
Patch
(12.21 KB, patch)
2020-09-18 17:26 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-09-18 17:26:47 PDT
Created
attachment 409183
[details]
Patch
Ross Kirsling
Comment 2
2020-09-18 17:28:40 PDT
Comment on
attachment 409183
[details]
Patch LGTM
EWS
Comment 3
2020-09-18 19:19:53 PDT
Committed
r267306
: <
https://trac.webkit.org/changeset/267306
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409183
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-09-18 19:20:19 PDT
<
rdar://problem/69189665
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug